--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,27 @@ yarn-error.log*
 
 # Local Netlify folder
 .netlify
+
+node_modules
+.env
+coverage
+coverage.json
+typechain
+typechain-types
+
+# Hardhat files
+cache
+artifacts
+
+
+node_modules
+.env
+coverage
+coverage.json
+typechain
+typechain-types
+
+# Hardhat files
+cache
+artifacts
+
